--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p class="section-subtitle">Instrumentos validados para rastreamento em saúde mental</p>
             
             <div class="tests-grid">
-                <div class="test-card" onclick="window.location.href='tests/teste-bdi-pc.html'">
+                <div class="test-card" onclick="window.location.href='html_tests/bdi-pc.html'">
                     <span class="test-tag">Depressão</span>
                     <h4>Escala de Depressão para Atenção Primária (BDI-PC)</h4>
                     <p>Instrumento de rastreamento rápido para sintomas depressivos em contextos de atenção primária à saúde.</p>
