Remove: Delete landing.css (styles moved to style.css)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@400;600;700&family=Work+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/landing.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="header">
@@ -23,6 +23,7 @@
         </div>
     </header>
 
+    <!-- Testes Section -->
     <section id="testes" class="tests-section" style="padding-top: 4rem;">
         <div class="container">
             <h2 class="section-title">Catálogo de Testes</h2>
@@ -39,7 +40,7 @@
                     </div>
                 </div>
 
-                <div class="test-card" onclick="window.location.href='tests/teste-gad7.html'">
+                <div class="test-card" onclick="window.location.href='html_tests/gad7.html'">
                     <span class="test-tag">Ansiedade</span>
                     <h4>Escala de Ansiedade Generalizada (GAD-7)</h4>
                     <p>Avaliação breve e eficaz de sintomas de ansiedade generalizada amplamente utilizada na prática clínica.</p>
@@ -52,6 +53,7 @@
         </div>
     </section>
 
+    <!-- Como Funciona Section -->
     <section id="como-funciona" class="features">
         <div class="container">
             <h2 class="section-title">Como Funciona</h2>
@@ -79,35 +81,7 @@
         </div>
     </section>
 
-    <section id="testes" class="tests-section">
-        <div class="container">
-            <h2 class="section-title">Testes Disponíveis</h2>
-            <p class="section-subtitle">Instrumentos validados para rastreamento em saúde mental</p>
-            
-            <div class="tests-grid">
-                <div class="test-card" onclick="window.location.href='tests/teste-bdi-pc.html'">
-                    <span class="test-tag">Depressão</span>
-                    <h4>Escala de Depressão para Atenção Primária (BDI-PC)</h4>
-                    <p>Instrumento de rastreamento rápido para sintomas depressivos em contextos de atenção primária à saúde.</p>
-                    <div class="test-meta">
-                        <span>⏱️ 3-5 min</span>
-                        <span>📊 7 questões</span>
-                    </div>
-                </div>
-
-                <div class="test-card" onclick="window.location.href='tests/teste-gad7.html'">
-                    <span class="test-tag">Ansiedade</span>
-                    <h4>Escala de Ansiedade Generalizada (GAD-7)</h4>
-                    <p>Avaliação breve e eficaz de sintomas de ansiedade generalizada amplamente utilizada na prática clínica.</p>
-                    <div class="test-meta">
-                        <span>⏱️ 3-5 min</span>
-                        <span>📊 7 questões</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
+    <!-- CTA Section -->
     <section class="cta-section">
         <div class="container">
             <h2>Pronto para Começar?</h2>
@@ -116,6 +90,7 @@
         </div>
     </section>
 
+    <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
@@ -147,7 +122,7 @@
                 <div>
                     <h4>Contato</h4>
                     <ul class="footer-links">
-                        <li><a href="/cdn-cgi/l/email-protection#97f4f8f9e3f6e3f8d7f6f9f8e1f6e4f6e2f3f2b9f8e5f0"><span class="__cf_email__" data-cfemail="f99a96978d988d96b99897968f988a988c9d9cd7968b9e">[email&#160;protected]</span></a></li>
+                        <li><a href="mailto:contato@anovasaude.com">contato@anovasaude.com</a></li>
                         <li><a href="#">Perguntas Frequentes</a></li>
                         <li><a href="#">Suporte</a></li>
                     </ul>
@@ -155,4 +130,9 @@
             </div>
             
             <div class="footer-bottom">
-  
+                <p>&copy; 2024 Anova Saúde. Todos os direitos reservados.</p>
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
