Add GAD7 test and update scoring logic

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anova Saúde | Avaliações Psicológicas</title>
+    <link rel="icon" type="image/x-icon" href="logo_icon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@400;600;700&family=Work+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -30,6 +31,16 @@
             <p class="section-subtitle">Instrumentos validados para rastreamento em saúde mental</p>
             
             <div class="tests-grid">
+                <div class="test-card" onclick="window.location.href='html_tests/demo_test.html'">
+                    <span class="test-tag">DEMO</span>
+                    <h4>Teste de Demonstração</h4>
+                    <p>Um teste rápido com apenas 2 questões. Perfeito para experimentar como funciona a plataforma.</p>
+                    <div class="test-meta">
+                        <span>⏱️ 1 min</span>
+                        <span>📊 2 questões</span>
+                    </div>
+                </div>
+
                 <div class="test-card" onclick="window.location.href='html_tests/bdi-pc.html'">
                     <span class="test-tag">Depressão</span>
                     <h4>Escala de Depressão para Atenção Primária (BDI-PC)</h4>
