--- a/index.html
+++ b/index.html
@@ -29,9 +29,20 @@
         <div class="container">
             <h2 class="section-title">Catálogo de Testes</h2>
             <p class="section-subtitle">Instrumentos validados para rastreamento em saúde mental</p>
+
+            <div class="tests-dashboard" aria-live="polite">
+                <div class="tests-dashboard__summary">
+                    <h3>Seu Progresso</h3>
+                    <p>Você já concluiu <strong id="tests-taken-count">0</strong> testes.</p>
+                </div>
+                <div class="tests-dashboard__list">
+                    <h4>Testes realizados</h4>
+                    <ul id="tests-taken-list" class="tests-taken-list"></ul>
+                </div>
+            </div>
             
             <div class="tests-grid">
-                <div class="test-card" onclick="window.location.href='html_tests/demo_test.html'">
+                <div class="test-card" data-test-id="demo-test" data-test-title="Teste de Demonstração" onclick="window.location.href='html_tests/demo_test.html'">
                     <span class="test-tag">DEMO</span>
                     <h4>Teste de Demonstração</h4>
                     <p>Um teste rápido com apenas 2 questões. Perfeito para experimentar como funciona a plataforma.</p>
@@ -41,7 +52,7 @@
                     </div>
                 </div>
 
-                <div class="test-card" onclick="window.location.href='html_tests/bdi-pc.html'">
+                <div class="test-card" data-test-id="bdi-pc" data-test-title="Escala de Depressão para Atenção Primária (BDI-PC)" onclick="window.location.href='html_tests/bdi-pc.html'">
                     <span class="test-tag">Depressão</span>
                     <h4>Escala de Depressão para Atenção Primária (BDI-PC)</h4>
                     <p>Instrumento de rastreamento rápido para sintomas depressivos em contextos de atenção primária à saúde.</p>
@@ -51,7 +62,7 @@
                     </div>
                 </div>
 
-                <div class="test-card" onclick="window.location.href='html_tests/gad7.html'">
+                <div class="test-card" data-test-id="gad7" data-test-title="Escala de Ansiedade Generalizada (GAD-7)" onclick="window.location.href='html_tests/gad7.html'">
                     <span class="test-tag">Ansiedade</span>
                     <h4>Escala de Ansiedade Generalizada (GAD-7)</h4>
                     <p>Avaliação breve e eficaz de sintomas de ansiedade generalizada amplamente utilizada na prática clínica.</p>
@@ -145,5 +156,8 @@
             </div>
         </div>
     </footer>
+
+    <script src="js/storage.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
