--- a/html_tests/demo_test.html
+++ b/html_tests/demo_test.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -58,6 +58,7 @@
 
     <!-- UTILITIES (reused by all tests) -->
     <script src="../js/storage.js"></script>
+    <script src="../js/dashboard.js"></script>
     <script src="../js/scoring.js"></script>
     <script src="../js/shared-pages.js"></script>
     
