--- a/index.html
+++ b/index.html
@@ -28,52 +28,27 @@
                     </div>
                 </div>
                 <ul class="nav-links">
-                    <li><a href="#testes">Catálogo de Testes</a></li>
+                    <li><a href="catalogo.html">Catálogo de Testes</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <!-- Testes Section -->
+    <!-- Catálogo em Destaque -->
     <section id="testes" class="tests-section" style="padding-top: 4rem;">
         <div class="container">
             <h2 class="section-title">Catálogo de Testes</h2>
-            <p class="section-subtitle">Instrumentos validados para rastreamento em saúde mental</p>
+            <p class="section-subtitle">Principais instrumentos — veja todos no catálogo completo.</p>
 
-            <div class="tests-grid">
-                <div class="test-card" data-test-id="demo-test" data-test-title="Teste de Demonstração" data-href="window.location.href='html_tests/demo_test.html'" onclick="window.location.href='html_tests/demo_test.html'">
-                    <span class="test-tag">DEMO</span>
-                    <h4>Teste de Demonstração</h4>
-                    <p>Um teste rápido com apenas 2 questões. Perfeito para experimentar como funciona a plataforma.</p>
-                    <div class="test-meta">
-                        <span>⏱️ 1 min</span>
-                        <span>📊 2 questões</span>
-                    </div>
-                </div>
+            <div class="tests-grid" id="tests-highlight"></div>
 
-                <div class="test-card" data-test-id="bdi-pc" data-test-title="Escala de Depressão para Atenção Primária (BDI-PC)" data-href="window.location.href='html_tests/bdi-pc.html'" onclick="window.location.href='html_tests/bdi-pc.html'">
-                    <span class="test-tag">Depressão</span>
-                    <h4>Escala de Depressão para Atenção Primária (BDI-PC)</h4>
-                    <p>Instrumento de rastreamento rápido para sintomas depressivos em contextos de atenção primária à saúde.</p>
-                    <div class="test-meta">
-                        <span>⏱️ 3-5 min</span>
-                        <span>📊 7 questões</span>
-                    </div>
-                </div>
-
-                <div class="test-card" data-test-id="gad7" data-test-title="Escala de Ansiedade Generalizada (GAD-7)" data-href="window.location.href='html_tests/gad7.html'" onclick="window.location.href='html_tests/gad7.html'">
-                    <span class="test-tag">Ansiedade</span>
-                    <h4>Escala de Ansiedade Generalizada (GAD-7)</h4>
-                    <p>Avaliação breve e eficaz de sintomas de ansiedade generalizada amplamente utilizada na prática clínica.</p>
-                    <div class="test-meta">
-                        <span>⏱️ 3-5 min</span>
-                        <span>📊 7 questões</span>
-                    </div>
-                </div>
+            <div style="text-align:center; margin-top:2rem;">
+                <a href="catalogo.html" class="cta-button-light">Ver catálogo completo</a>
             </div>
         </div>
     </section>
-
+    <iframe id="catalog-source" src="catalogo.html" style="display:none;" aria-hidden="true"></iframe>
+        
     <!-- Como Funciona Section -->
     <section id="como-funciona" class="features">
         <div class="container">
@@ -102,14 +77,63 @@
         </div>
     </section>
 
-    <!-- CTA Section -->
-    <section class="cta-section">
+    <!-- Team Section -->
+    <section class="team-section" id="equipe">
         <div class="container">
-            <h2>Pronto para Começar?</h2>
-            <p>Dê o primeiro passo para um maior autoconhecimento e bem-estar emocional</p>
-            <a href="#testes" class="cta-button-light">Iniciar Avaliação Gratuita</a>
+            <h2 class="section-title">Equipe</h2>
+            <p class="section-subtitle">Profissionais dedicados a cuidar da sua jornada de saúde mental.</p>
+
+            <div class="team-grid">
+                <article class="team-card" data-name="Luis Anunciação" data-role="Psicólogo Clínico" data-bio="Especialista em avaliação psicológica e saúde mental comunitária. Atuação em atenção primária e pesquisa em rastreio de depressão.">
+                    <div class="team-photo">LA</div>
+                    <div>
+                        <h3 class="team-name">Luis Anunciação</h3>
+                        <p class="team-role">Psicólogo Clínico</p>
+                        <p class="team-snippet">Avaliação psicológica, saúde pública.</p>
+                    </div>
+                </article>
+
+                <article class="team-card" data-name="Person 2" data-role="Psicóloga" data-bio="Focada em ansiedade e intervenção breve. Experiência em grupos terapêuticos.">
+                    <div class="team-photo">P2</div>
+                    <div>
+                        <h3 class="team-name">Person 2</h3>
+                        <p class="team-role">Psicóloga</p>
+                        <p class="team-snippet">Ansiedade, intervenção breve.</p>
+                    </div>
+                </article>
+
+                <article class="team-card" data-name="Person 3" data-role="Neuropsicólogo" data-bio="Atuação em avaliação neuropsicológica e acompanhamento de TDAH ao longo do ciclo de vida.">
+                    <div class="team-photo">P3</div>
+                    <div>
+                        <h3 class="team-name">Person 3</h3>
+                        <p class="team-role">Neuropsicólogo</p>
+                        <p class="team-snippet">TDAH, neuropsicologia.</p>
+                    </div>
+                </article>
+
+                <article class="team-card" data-name="Person 4" data-role="Psicoterapeuta" data-bio="Especialista em terapia cognitivo-comportamental com foco em estresse e burnout.">
+                    <div class="team-photo">P4</div>
+                    <div>
+                        <h3 class="team-name">Person 4</h3>
+                        <p class="team-role">Psicoterapeuta</p>
+                        <p class="team-snippet">Estresse, burnout.</p>
+                    </div>
+                </article>
+            </div>
         </div>
     </section>
+
+
+    <!-- Team Modal -->
+    <div class="team-modal" id="team-modal" aria-hidden="true">
+        <div class="team-modal__backdrop" id="team-modal-backdrop"></div>
+        <div class="team-modal__dialog" role="dialog" aria-modal="true" aria-labelledby="team-modal-name">
+            <button class="team-modal__close" id="team-modal-close" aria-label="Fechar">×</button>
+            <h3 id="team-modal-name"></h3>
+            <p id="team-modal-role" class="team-role"></p>
+            <p id="team-modal-bio" class="team-bio"></p>
+        </div>
+    </div>
 
     <!-- Footer -->
     <footer class="footer">
@@ -161,8 +185,3 @@
     <script src="js/index.js"></script>
 </body>
 </html>
-
-
-
-
-
