--- a/catalogo.html
+++ b/catalogo.html
@@ -26,6 +26,7 @@
                         <button type="button" class="progress-btn" id="view-results-btn" title="Ver resultados">Ver</button>
                         <button type="button" class="progress-btn progress-btn--ghost" id="clear-results-btn" title="Limpar resultados">Limpar</button>
                     </div>
+                    <button type="button" class="nav-toggle" aria-label="Abrir menu" aria-expanded="false">☰</button>
                 </div>
                 <ul class="nav-links">
                     <li><a href="index.html#equipe">Equipe</a></li>
