--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@400;600;700&family=Work+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="header">
@@ -67,11 +67,10 @@
         <!-- RESULTS, DEMOGRAPHICS, PAYMENT injected by shared-pages.js -->
     </div>
 
-    <script src="../js/storage.js"></script>
-    <script src="../js/dashboard.js"></script>
-    <script src="../js/scoring.js"></script>
-    <script src="../js/shared-pages.js"></script>
-    <script src="../js/test-catalog.js"></script>
-    <script src="../js/test-runner.js"></script>
+    <script src="js/storage.js"></script>
+    <script src="js/dashboard.js"></script>
+    <script src="js/scoring.js"></script>
+    <script src="js/shared-pages.js"></script>
+    <script src="js/test-runner.js"></script>
 </body>
 </html>
