Add new questionnaires for OCD and anxiety assessment
- Created 'escala-1.json' for a questionnaire assessing various symptoms related to anxiety and obsessive-compulsive behaviors, featuring 18 Likert scale questions and scoring factors.
- Added 'oci_exemplo.json' to evaluate obsessive-compulsive symptoms across different dimensions, including 18 questions and detailed scoring ranges.
- Introduced 'ts.json', a simple questionnaire with 2 Likert scale questions and basic scoring.

--- a/catalogo.html
+++ b/catalogo.html
@@ -57,6 +57,18 @@
     <script src="js/dashboard.js"></script>
     <script>
     (function(){
+        // Format markdown text
+        function formatMarkdown(text) {
+            if (!text) return '';
+            // Convert **text** to <strong>text</strong>
+            text = text.replace(/\*\*(.+?)\*\*/g, '<strong>$1</strong>');
+            // Convert *text* to <em>text</em> (but not already processed **)
+            text = text.replace(/(?<!\*)\*([^*]+?)\*(?!\*)/g, '<em>$1</em>');
+            // Convert line breaks to <br>
+            text = text.replace(/\n/g, '<br>');
+            return text;
+        }
+        
         const grid = document.getElementById('catalog-grid');
 
         function createCard(test) {
@@ -81,7 +93,7 @@
                 ${ribbon}
                 <span class="test-tag">${test.tag || 'Teste'}</span>
                 <h4>${test.title}</h4>
-                <p>${test.description || ''}</p>
+                <p>${formatMarkdown(test.description)}</p>
                 <div class="test-meta"><span>⏱️ ${test.estimatedTime || ''}</span><span>📊 ${test.questionCount || ''} questões</span></div>
                 <div class="test-actions">
                     ${article}
