--- a/admin/login.html
+++ b/admin/login.html
@@ -19,46 +19,54 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background: linear-gradient(135deg, #e8e8e8 0%, #f5f5f5 50%, #e8e8e8 100%);
-            background-size: 400% 400%;
-            animation: gradientShift 15s ease infinite;
+            background: linear-gradient(-45deg, #f5f5f5, #e8e8e8, #d8d8d8, #eeeeee, #ffffff, #e0e0e0);
+            background-size: 600% 600%;
+            animation: gradientFlow 12s ease infinite;
             position: relative;
             overflow: hidden;
         }
 
-        @keyframes gradientShift {
-            0%, 100% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
+        @keyframes gradientFlow {
+            0% { background-position: 0% 50%; }
+            25% { background-position: 100% 50%; }
+            50% { background-position: 100% 100%; }
+            75% { background-position: 0% 100%; }
+            100% { background-position: 0% 50%; }
         }
 
-        /* Decorative background elements */
+        /* Smooth gradient layers */
         body::before {
             content: '';
             position: absolute;
-            width: 500px;
-            height: 500px;
-            background: rgba(0, 0, 0, 0.02);
-            border-radius: 50%;
-            top: -200px;
-            right: -200px;
-            animation: float 20s infinite ease-in-out;
+            width: 100%;
+            height: 100%;
+            background: radial-gradient(ellipse at 20% 30%, rgba(255, 255, 255, 0.3) 0%, transparent 50%),
+                        radial-gradient(ellipse at 80% 70%, rgba(240, 240, 240, 0.4) 0%, transparent 50%),
+                        radial-gradient(ellipse at 50% 50%, rgba(230, 230, 230, 0.2) 0%, transparent 60%);
+            animation: gradientShift 20s ease-in-out infinite;
+            pointer-events: none;
         }
 
         body::after {
             content: '';
             position: absolute;
-            width: 400px;
-            height: 400px;
-            background: rgba(0, 0, 0, 0.015);
-            border-radius: 50%;
-            bottom: -150px;
-            left: -150px;
-            animation: float 25s infinite ease-in-out reverse;
+            width: 100%;
+            height: 100%;
+            background: radial-gradient(circle at 60% 40%, rgba(255, 255, 255, 0.25) 0%, transparent 40%),
+                        radial-gradient(circle at 30% 80%, rgba(220, 220, 220, 0.3) 0%, transparent 45%);
+            animation: gradientShift 18s ease-in-out infinite reverse;
+            pointer-events: none;
         }
 
-        @keyframes float {
-            0%, 100% { transform: translate(0, 0) scale(1); }
-            50% { transform: translate(30px, -50px) scale(1.1); }
+        @keyframes gradientShift {
+            0%, 100% { 
+                transform: translate(0, 0) scale(1);
+                opacity: 1;
+            }
+            50% { 
+                transform: translate(30px, -40px) scale(1.1);
+                opacity: 0.8;
+            }
         }
 
         .login-container {
@@ -67,14 +75,14 @@
             width: 90%;
             max-width: 420px;
             padding: 3rem 2.5rem;
-            background: rgba(255, 255, 255, 0.7);
+            background: rgba(255, 255, 255, 0.85);
             backdrop-filter: blur(40px) saturate(180%);
             -webkit-backdrop-filter: blur(40px) saturate(180%);
             border-radius: 24px;
-            border: 1px solid rgba(0, 0, 0, 0.06);
+            border: 1px solid rgba(0, 0, 0, 0.08);
             box-shadow: 
-                0 8px 32px rgba(0, 0, 0, 0.08),
-                inset 0 1px 0 rgba(255, 255, 255, 0.8);
+                0 20px 60px rgba(0, 0, 0, 0.15),
+                inset 0 1px 0 rgba(255, 255, 255, 0.9);
             animation: slideUp 0.6s cubic-bezier(0.16, 1, 0.3, 1);
         }
 
@@ -122,7 +130,7 @@
         input[type="password"] {
             width: 100%;
             padding: 0.9rem 1rem;
-            background: rgba(255, 255, 255, 0.9);
+            background: rgba(255, 255, 255, 0.95);
             border: 1px solid rgba(0, 0, 0, 0.1);
             border-radius: 12px;
             color: #2b2b2b;
@@ -157,6 +165,26 @@
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             box-shadow: 0 4px 16px rgba(0, 0, 0, 0.15);
             letter-spacing: 0.3px;
+            position: relative;
+            overflow: hidden;
+        }
+        
+        .btn-login::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 0;
+            height: 0;
+            border-radius: 50%;
+            background: rgba(255, 255, 255, 0.1);
+            transform: translate(-50%, -50%);
+            transition: width 0.6s, height 0.6s;
+        }
+        
+        .btn-login:hover::before {
+            width: 300px;
+            height: 300px;
         }
 
         .btn-login:hover {
